[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Buttons/btn_idle.png" type="Texture" id=1]
[ext_resource path="res://Assets/Fonts/just-breathe-font/JustBreatheObliqueone-L7lG.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Buttons/btn1.png" type="Texture" id=3]
[ext_resource path="res://Buttons/Botones.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 588
font_data = ExtResource( 2 )

[node name="Botones" type="CanvasLayer"]
script = ExtResource( 4 )
__meta__ = {
"_edit_horizontal_guides_": [ 2028.0 ]
}

[node name="btn11" type="TextureButton" parent="."]
margin_left = 279.0
margin_top = 807.0
margin_right = 2759.0
margin_bottom = 4315.0
rect_scale = Vector2( 0.149421, 0.0859606 )
rect_clip_content = true
texture_normal = ExtResource( 1 )
flip_h = true
flip_v = true

[node name="btn21" type="TextureButton" parent="."]
margin_left = 279.0
margin_top = 1173.0
margin_right = 2759.0
margin_bottom = 4681.0
rect_scale = Vector2( 0.149421, 0.0859606 )
rect_clip_content = true
texture_normal = ExtResource( 1 )
flip_h = true
flip_v = true

[node name="btn31" type="TextureButton" parent="."]
margin_left = 279.0
margin_top = 1519.0
margin_right = 2759.0
margin_bottom = 5027.0
rect_scale = Vector2( 0.149421, 0.0859606 )
rect_clip_content = true
texture_normal = ExtResource( 1 )
flip_h = true
flip_v = true

[node name="btn12" type="TextureButton" parent="."]
margin_left = 705.0
margin_top = 807.0
margin_right = 3185.0
margin_bottom = 4315.0
rect_scale = Vector2( 0.149421, 0.0859606 )
rect_clip_content = true
texture_normal = ExtResource( 1 )
flip_h = true
flip_v = true

[node name="btn22" type="TextureButton" parent="."]
margin_left = 705.0
margin_top = 1173.0
margin_right = 3185.0
margin_bottom = 4681.0
rect_scale = Vector2( 0.149421, 0.0859606 )
rect_clip_content = true
texture_normal = ExtResource( 1 )
flip_h = true
flip_v = true

[node name="btn32" type="TextureButton" parent="."]
margin_left = 705.0
margin_top = 1519.0
margin_right = 3185.0
margin_bottom = 5027.0
rect_scale = Vector2( 0.149421, 0.0859606 )
rect_clip_content = true
texture_normal = ExtResource( 1 )
flip_h = true
flip_v = true

[node name="btn13" type="TextureButton" parent="."]
margin_left = 1137.0
margin_top = 807.0
margin_right = 3617.0
margin_bottom = 4315.0
rect_scale = Vector2( 0.149421, 0.0859606 )
rect_clip_content = true
texture_normal = ExtResource( 1 )
flip_h = true
flip_v = true

[node name="btn23" type="TextureButton" parent="."]
margin_left = 1137.0
margin_top = 1173.0
margin_right = 3617.0
margin_bottom = 4681.0
rect_scale = Vector2( 0.149421, 0.0859606 )
rect_clip_content = true
texture_normal = ExtResource( 1 )
flip_h = true
flip_v = true

[node name="btn33" type="TextureButton" parent="."]
margin_left = 1137.0
margin_top = 1519.0
margin_right = 3617.0
margin_bottom = 5027.0
rect_scale = Vector2( 0.149421, 0.0859606 )
rect_clip_content = true
texture_normal = ExtResource( 1 )
flip_h = true
flip_v = true

[node name="btnReset" type="TextureButton" parent="."]
margin_left = 1088.0
margin_top = 1986.0
margin_right = 3568.0
margin_bottom = 5494.0
rect_scale = Vector2( 0.176382, 0.0479272 )
rect_clip_content = true
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 3 )

[node name="Label" type="Label" parent="btnReset"]
margin_left = 419.543
margin_top = 688.531
margin_right = 2092.54
margin_bottom = 1277.53
rect_scale = Vector2( 1, 3.504 )
custom_fonts/font = SubResource( 1 )
text = "Reset"

[connection signal="pressed" from="btn11" to="." method="_on_btn11_pressed"]
[connection signal="pressed" from="btn21" to="." method="_on_btn21_pressed"]
[connection signal="pressed" from="btn31" to="." method="_on_btn31_pressed"]
[connection signal="pressed" from="btn12" to="." method="_on_btn12_pressed"]
[connection signal="pressed" from="btn22" to="." method="_on_btn22_pressed"]
[connection signal="pressed" from="btn32" to="." method="_on_btn32_pressed"]
[connection signal="pressed" from="btn13" to="." method="_on_btn13_pressed"]
[connection signal="pressed" from="btn23" to="." method="_on_btn23_pressed"]
[connection signal="pressed" from="btn33" to="." method="_on_btn33_pressed"]
[connection signal="pressed" from="btnReset" to="." method="_on_btnReset_pressed"]
